tests/parse_print/basic/typeErrorInDecl/typeErrorInDecl.essence
language Essence 1.3

find x : int(1..2+false)
